# embers-passes

./: README.md  pyproject.toml
embers_extract/: README.md  extract_tile_passes.py  sbatch_extract_tile_passes.sh
notebooks/: logo.ipynb  noise.ipynb
src/embers_passes/: __init__.py  io.py
