[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "embers-passes"
version = "0.1.0"
description = "A lightweight reader and exploration toolkit for calibrated EMBERS satellite pass data."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Aman Chokshi" },
]
keywords = [
    "radio astronomy",
    "MWA",
    "satellites",
    "beam calibration",
    "HDF5",
    "embers",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
    "h5py>=3.16.0",
    "numpy>=2.4.4",
]

[project.urls]
Homepage = "https://github.com/amanchokshi/embers-passes"
Repository = "https://github.com/amanchokshi/embers-passes"
Issues = "https://github.com/amanchokshi/embers-passes/issues"

[dependency-groups]
dev = [
    "cmasher>=1.9.2",
    "healpy>=1.19.0",
    "ipympl>=0.10.0",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.0",
    "mwa-hyperbeam>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "cmasher>=1.9.2",
    "healpy>=1.19.0",
    "ipympl>=0.10.0",
    "ipython>=9.12.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.0",
    "mwa-hyperbeam>=0.10.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/embers_passes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/embers_passes",
    "README.md",
    "pyproject.toml",
    "notebooks",
    "embers_extract",
]

[tool.uv]
package = true
